r migrated neighbours methods to Neighbours class